# Slides2Textbook

./: .gitignore  INFO1111_Exam_Textbook_Old.md  INFO1111_Exam_Textbook_Prep.epub  INFO1111_Exam_Textbook_Prep.md  README.md  llm_tools.py  main.py  mdToPdf.py  md_saver.py  pdf_converter.py  pdf_decoder.py  pyproject.toml  requirements.txt  slides_to_textbook.py  text_loader.py
examples/: EXAMPLES.md
examples/cs50-2024/input/1/: [English] CS50x 2024 - Lecture 0 - Scratch [DownSub.com].txt
examples/cs50-2024/input/10/: [English] CS50x 2024 - Lecture 8 - HTML, CSS, JavaScript [DownSub.com].txt
examples/cs50-2024/input/11/: [English] CS50x 2024 - Lecture 9 - Flask [DownSub.com].txt
examples/cs50-2024/input/12/: [English] CS50x 2024 - Cybersecurity [DownSub.com].txt
examples/cs50-2024/input/2/: [English] CS50x 2024 - Lecture 1 - C [DownSub.com].txt
examples/cs50-2024/input/3/: [English] CS50x 2024 - Lecture 2 - Arrays [DownSub.com].txt
examples/cs50-2024/input/4/: [English] CS50x 2024 - Lecture 3 - Algorithms [DownSub.com].txt
examples/cs50-2024/input/5/: [English] CS50x 2024 - Lecture 4 - Memory [DownSub.com].txt
examples/cs50-2024/input/6/: [English] CS50x 2024 - Lecture 5 - Data Structures [DownSub.com].txt
examples/cs50-2024/output/: CS50-2024.epub  CS50-2024.md
slides2textbook/: __main__.py  cli.py  context_loader.py  llm_classes.py  llm_tools.py  logconfig.py  main.py  md_helper.py  pdf_decoder.py  prompt_builder.py  text_loader.py
slides2textbook/agents/: planner.py  writer.py
slides_to_textbook/: llm_tools.py  main.py
(+15 files in other folders)
